# alphavet_latter

./: .gitignore  .gitmodules  README.md  go.mod  go.sum
Authorization/: authoDB.env  database.go  environment.go  go.mod  go.sum  main.go  server.go  token.go
TelegramBot/: ApiClient.cs  BotController.cs  ClientManager.cs  ConfigLoader.cs  Program.cs  RedisStorage.cs  TelegramBot.csproj
TestProcessing/: CMakeLists.txt  main.cpp
TestProcessing/include/: api_server.h  config_loader.h  db_connector.h  httplib.h  token_decoder.h
TestProcessing/src/: api_server.cpp  config_loader.cpp  db_connector.cpp  token_decoder.cpp
WebClient/: package-lock.json  package.json
WebClient/backend/: server.js  test_redis.js
WebClient/frontend/: cabinet.html  connection.js  entry.html  index.html
WebClient/frontend/markup/: cabinet.html  discipline.html  entry.html  footer.html  notification.html  primary.html  test.html
WebClient/frontend/scripts/: cabinet.js  discipline.js  entry.js  inputfiltering.js  navigation.js  notification.js  primary.js  quests.js  sections.js  smoothonload.js  test.js
WebClient/frontend/styles/: body.css  buttons.css  cabinet.css  container.css  discipline.css  entry.css  footer.css  header.css  modal.css  navigation.css  notification.css  primary.css  sections.css  test.css
